ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    tailscale.com/funnel: "true"
    tailscale.com/host: "k3s"
    tailscale.com/tags: "tag:k8s,tag:funnel"
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server-ts
  namespace: argocd
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /argocd
        pathType: Prefix
  tls:
  - hosts:
    - k3s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    tailscale.com/funnel: "true"
    tailscale.com/host: "k3s"
    tailscale.com/tags: "tag:k8s,tag:funnel"
  labels:
    app.kubernetes.io/instance: dex
    app.kubernetes.io/name: dex
  name: dex
  namespace: dex
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - backend:
          service:
            name: dex
            port:
              number: 5556
        path: /dex
        pathType: Prefix
  tls:
  - hosts:
    - k3s
